  * img: Allow the link parameter to point to an exterior url.
  * conditional: Improve regexp testing for simple uses of pagespecs
    that match only the page using the directive, adding 'included()'
    and supporting negated pagespecs and added whitespace.
  * map: Fix handling of common prefix to handle the case where it's
    in a subdirectory. Patch by Larry Clapp.

 -- Joey Hess <joeyh@debian.org>  Wed, 19 Dec 2007 16:39:07 -0500

ikiwiki (2.16) unstable; urgency=low

  * Major basewiki reorganisation. Most pages moved into ikiwiki/ subdirectory
    to avoid polluting the main namespace, and some were further renamed.
  * meta: Add redir support, based on a patch by Thomas Schwinge.
  * Redirs added for moved basewiki pages. These will be removed in a future
    release.
  * Remove .otl file from sandbox to avoid build ugliness. Closes: #454181
  * Finally implemented a simple per-page data storage mechanism for plugins,
    via the %pagestate hash.
  * Use pagestate in meta to detect potential redir loops.
  * Added a version plugin that saves state about what's using it, to force
    pages to rebuild when ikiwiki's version changes.
  * The calendar plugin stores state about when it needs to be updated,
    and forces rebuilds of the pages that contain calendars. So
    running ikiwiki --refresh at midnight is now enough, no need for a full
    wiki rebuild each midnight.
  * calendar: Work around block html parsing bug in markdown 1.0.1 by
    enclosing the calendar in an extra div.
  * Fix file pruning code to work if ikiwiki is run with "." as the srcdir.
  * Add an edittemplate plugin, allowing registering template pages, that
    provide default content for new pages created using the web frontend.
  * Change formbuilder hook to not be responsible for displaying a form,
    so that more than one plugin can use this hook.
    I believe this is a safe change, since only passwordauth uses this hook.